--- a/PortfolioWebASP/PortfolioWebASP/Web.config
+++ b/PortfolioWebASP/PortfolioWebASP/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. на странице
   https://go.microsoft.com/fwlink/?LinkId=169433.
@@ -7,6 +7,8 @@
 	
   <connectionStrings>
     <add name="con" connectionString="Data Source=DESKTOP-84SEDO3;Initial Catalog=elibraryDB;Integrated Security=true" />
+    <add name="elibraryDBConnectionString" connectionString="Data Source=DESKTOP-84SEDO3;Initial Catalog=elibraryDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>	
 	
   <system.web>
